Gamescreen: changed the  the GameScreen to use Engine Ashley ECS instead of World Fleks ECS, upgraded to create more instances of entity more faster! Updated renderSystem, ImageComponents.

--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -34,6 +34,7 @@ dependencies {
   implementation "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop"
   implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
   implementation "com.github.MrStahlfelge.gdx-websockets:common:$websocketVersion"
+  implementation "com.badlogicgames.ashley:ashley:1.7.4"
   implementation project(':core')
 }
 
